force-app/main/default/objects/Service__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <type>Lookup</type>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Contract</relationshipName>
</CustomField> 