force-app/main/default/objects/Service__c/fields/CUPS__c.field-meta.xml
<CustomField>
    <fullName>CUPS__c</fullName>
    <label>CUPS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>