force-app/main/default/objects/Service__c/fields/CUPS_Electricidad__c.field-meta.xml
<CustomField>
    <fullName>CUPS_Electricidad__c</fullName>
    <label>CUPS Electricidad</label>
    <length>20</length>
    <type>Text</type>
</CustomField>