force-app/main/default/objects/Service__c/fields/CUPS_Gas__c.field-meta.xml
<CustomField>
    <fullName>CUPS_Gas__c</fullName>
    <label>CUPS Gas</label>
    <length>20</length>
    <type>Text</type>
</CustomField>