force-app/main/default/objects/Service__c/fields/Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Holder_Name__c</fullName>
    <label>Holder Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>