force-app/main/default/objects/Service__c/fields/Holder_NIF__c.field-meta.xml
<CustomField>
    <fullName>Holder_NIF__c</fullName>
    <label>Holder NIF</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>