force-app/main/default/objects/Service__c/fields/New_Holder_NIF__c.field-meta.xml
<CustomField>
    <fullName>New_Holder_NIF__c</fullName>
    <label>New Holder NIF</label>
    <length>20</length>
    <type>Text</type>
</CustomField>