force-app/main/default/objects/Service__c/fields/New_Supplier__c.field-meta.xml
<CustomField>
    <fullName>New_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Services (New Supplier)</relationshipLabel>
    <relationshipName>Services_New_Supplier</relationshipName>
    <type>Lookup</type>
</CustomField>